@@ -1,4 +1,4 @@
-.\" @(#)lc.1	1.7 8/7/92 Kent Landfield;
+.\" @(#)lc.1	1.8 8/20/92 Kent Landfield;
 .TH LC 1 "Usenet Source"
 .SH NAME
 .B lc 
@@ -170,3 +170,5 @@ symbolic links specified on the command line.
 .PP
 Jonathan Bayer <jbayer@ispi.com> added several features, including the 
 options -C -i -x -X and added spell checking to CDPATH usage.  Thanks Jonathan!
+.PP
+Scott Bolte <scott@craycos.com> ported lc to a Cray running CSOS. 
