@@ -1,5 +1,5 @@
 /*
-**    @(#)patchlevel.h	1.1 8/2/92
+**    @(#)patchlevel.h	1.2 8/19/92
 */
 #define RELEASE 2
-#define PATCHLEVEL 0
+#define PATCHLEVEL 1
