@@ -1,5 +1,5 @@
 #
-# @(#)History	1.2 8/6/92
+# @(#)History	1.3 8/20/92
 #
 #  This file is a running history of the lc command.
 #
@@ -56,3 +56,5 @@ History:
           added the ability to display file which are inaccessible,
           added the ability to display only those files accessible by the user,
           added spell checking to the CDPATH.  Fantastic additions Jonathan!!
+
+      - Scott Bolte ported it to a Cray running CSOS.  
